# Talk-to-Fly

./: .gitignore  README.md  pyproject.toml
logs/: 10_20260219_114440_tra.csv  8_20260219_113751_tra.csv  9_20260219_113954_tra.csv
src/talk_to_fly/: __main__.py  skillset.py
src/talk_to_fly/assets/: prompt_plan.txt
src/talk_to_fly/core/: app.py  bootstrap.py
src/talk_to_fly/dsl/: minispec.py
src/talk_to_fly/io/: speech_input.py
src/talk_to_fly/llm/: controller.py
src/talk_to_fly/logging/: logger.py
src/talk_to_fly/telemetry/: gps_logger.py
src/talk_to_fly/uav/: mavlink_wrapper.py
